fix contrast

--- a/website/static/website/style.css
+++ b/website/static/website/style.css
@@ -2,7 +2,8 @@
     border-radius: 0;
 }
 
-.navbar-default .navbar-nav li a {
+.navbar-default .navbar-nav li a,
+.navbar-default .navbar-brand {
     color: #707070;
 }
 
